combining content pages, removing slides that do not belong to the basic category and renumbering pages

--- a/basic-concepts/basics-10.html
+++ b/basic-concepts/basics-10.html
@@ -16,11 +16,12 @@
     <div class="container-fluid">
 
 
-        <div id="" class="slide">
+
+        <div id="" class="slide stop">
             <div class="row slide-title">
                 <div class="col-12">
                     <h2 class="primary-title">TVM: The Basics</h2>
-                    <h3 class="secondary-title">TVM Equation</h3>
+                    <h3 class="secondary-title">Sample Problems</h3>
                 </div>
             </div>
             <nav class="row">
@@ -32,28 +33,28 @@
             <div class="row">
                 <div class="col-12">
                     <div class="content">
-                        <p>In the problem we just solved, the number in parentheses is called the Future Value Factor. In the ‘good old days’ before calculators, people used tables of pre-calculated Future Value Factors to solve the TVM equation.</p>
-                        <p>First, find the intersection of the number of periods (years) on the left and the interest rate at the top to find the Future Value Factor. Then multiply PV times the Future Value Factor to calculate FV.</p>
-                        <div class="bottom-space">
-                            <img src="../images/fv_factor_table_example_10_years.png" class="border img-fluid">
+                        <p>In the problem we just solved, the number in parentheses is called the Present Value Factor. When there are no lump sums or payments, the Present Value Factor is just the reciprocal of the Future Value Factor. </p>
+                        <p>Multiply the Future Value (FV) times the Present Value Factor to calculate Present Value (PV)</span class>.</p>
+                        <!-- <div><img class="math" src="../images/exponent-step.svg"></div> -->
+                        <div class="bottom-space"><img src="./images/pv_factors_table.png" class="img-fluid " alt=""></div>
+                        <div class="bottom-space"><img src="./images/tvm_basic_pv_factor_example.png" class="img-fluid " alt=""></div>
+                        <div class="bottom-space"><img src="./images/pv_factor_numbers.png" class="img-fluid " alt="">
                         </div>
-                        <div><img class="math" src="../images/future-value-factor.svg"></div>
                     </div>
                 </div>
             </div>
             <div class="row">
                 <div class="offset-3 col-4 offset-sm-4 col-sm-7 offset-md-6 col-md-6 offset-lg-7 col-lg-4 offset-xl-7 col-xl-4">
-                    <a type="button" class="btn" href="basics-9.html">Back</a>
-                    <a type="button" class="btn" href="basics-11.html">Continue</a>
+                    <a type="button" class="btn" href="basics-11.html">Back</a>
+                    <a type="button" class="btn" href="basics-13.html">Continue</a>
                 </div>
             </div>
             <div class="row">
                 <div class="col-1">
-                    <div class="page-number">13</div>
+                    <div class="page-number"></div>
                 </div>
             </div>
         </div>
-
 
 
     </div> <!--  end of container -->
