--- a/basic-concepts/basics-11.html
+++ b/basic-concepts/basics-11.html
@@ -15,11 +15,12 @@
 <body>
     <div class="container-fluid">
 
+
         <div id="" class="slide">
             <div class="row slide-title">
                 <div class="col-12">
                     <h2 class="primary-title">TVM: The Basics</h2>
-                    <h3 class="secondary-title">TVM Equation</h3>
+                    <h3 class="secondary-title">Sample Problems</h3>
                 </div>
             </div>
             <nav class="row">
@@ -31,21 +32,16 @@
             <div class="row">
                 <div class="col-12">
                     <div class="content">
-                        <p>So far we have calculated FV with the TVM equation and the Future Value Factor.</p>
-                        <p>A third way to calculate TVM is with a financial calculator. If you have a financial calculator, now would be a good time to make sure you know how to use it.</p>
-                        <p>Plug in the numbers to verify that the equation and calculator find the same FV using the math question you are familiar with.</p>
-                        <p class="alert">Note: Your calculator must be on End mode -- this is the most common mistake made on tests. Also, keep in mind that PV is entered as a negative number and interest is entered as a whole number.</p>
-                        <p class="question">How much would $100 grow in 10 years at 10%?</p>
-                        <p class="text-center">
-                            <img src="../images/tvm1_calculator_check_example.png" class="img-fluid">
-                        </p>
+                        <p>Answer this question:</p>
+                        <p class="question">If you need to triple your investment in 10 years, what interest rate will you need?</p>
+                        <p>When you think you have the answer, click Continue. If you don’t know how to calculate the answer, click Help.</p>
                     </div>
                 </div>
             </div>
             <div class="row">
                 <div class="offset-3 col-4 offset-sm-4 col-sm-7 offset-md-6 col-md-6 offset-lg-7 col-lg-4 offset-xl-7 col-xl-4">
-                    <a type="button" class="btn" href="basics-10.html">Back</a>
-                    <a type="button" class="btn" href="basics-12.html">Continue</a>
+                    <a type="button" class="btn" href="basics-12.html">Back</a>
+                    <a type="button" class="btn" href="basics-14.html">Continue</a>
                 </div>
             </div>
             <div class="row">
