--- a/basic-concepts/basics-14.html
+++ b/basic-concepts/basics-14.html
@@ -16,8 +16,7 @@
     <div class="container-fluid">
 
 
-
-        <div id="" class="slide stop">
+        <div id="" class="slide">
             <div class="row slide-title">
                 <div class="col-12">
                     <h2 class="primary-title">TVM: The Basics</h2>
@@ -33,20 +32,19 @@
             <div class="row">
                 <div class="col-12">
                     <div class="content">
-                        <p>In the problem we just solved, the number in parentheses is called the Present Value Factor. When there are no lump sums or payments, the Present Value Factor is just the reciprocal of the Future Value Factor. </p>
-                        <p>Multiply the Future Value (FV) times the Present Value Factor to calculate Present Value (PV)</span class>.</p>
-                        <!-- <div><img class="math" src="../images/exponent-step.svg"></div> -->
-                        <div class="bottom-space"><img src="./images/pv_factors_table.png" class="img-fluid " alt=""></div>
-                        <div class="bottom-space"><img src="./images/tvm_basic_pv_factor_example.png" class="img-fluid " alt=""></div>
-                        <div class="bottom-space"><img src="./images/pv_factor_numbers.png" class="img-fluid " alt="">
-                        </div>
+                        <p class="question">How many years will it take for you to earn $500 on your $1000 investment if you are guaranteed a 9% rate of return?</p>
+                        <p class="answer">The answer is 4.7 years.</p>
+                        <p>Did you get the right answer? If you answered incorrectly, click Help to calculate the answer.</p>
+                        <hr>
+                        <p>You have now solved a TVM equation for each of the 4 variables: Present Value, Future Value, Interest, and Time.</p>
+                        <p>This proves that you can solve for any of the four variables if you know the general TVM equation and have some basic math skills. You will have more opportunities to practice manipulating the equation in the Exercises section.</p>
                     </div>
                 </div>
             </div>
             <div class="row">
                 <div class="offset-3 col-4 offset-sm-4 col-sm-7 offset-md-6 col-md-6 offset-lg-7 col-lg-4 offset-xl-7 col-xl-4">
-                    <a type="button" class="btn" href="basics-13.html">Back</a>
-                    <a type="button" class="btn" href="basics-15.html">Continue</a>
+                    <a type="button" class="btn" href="basics-15.html">Back</a>
+                    <a type="button" class="btn" href="./exercises/exerciseIntro-1.html">To Exercises</a>
                 </div>
             </div>
             <div class="row">
@@ -55,6 +53,7 @@
                 </div>
             </div>
         </div>
+
 
 
     </div> <!--  end of container -->
