--- a/basic-concepts/basics-2.html
+++ b/basic-concepts/basics-2.html
@@ -11,14 +11,12 @@
 
     <title>Time Value of Money - Part 1</title>
 </head>
-
 <body>
     <div class="container-fluid">
-
         <div id="" class="slide">
             <div class="row slide-title">
                 <div class="col-12">
-                    <h2 class="primary-title">Time Value of Money: The Basics</h2>
+                    <h2 class="primary-title">TVM: The Basics</h2>
                     <h3 class="secondary-title">Introduction</h3>
                 </div>
             </div>
@@ -31,28 +29,23 @@
             <div class="row">
                 <div class="col-12">
                     <div class="content">
-                        <!-- <h2>The Time Value of Money</h2>
-                    <hr> -->
-                        <div id="learningObj" class="bottom-space">
-                            <h3>Learning Objectives</h3>
+                        <h2>TVM Equation</h2>
+                        <p>One of the central concepts of finance is that <i>a dollar today is worth more than a dollar in the future</i>. For example, if you make a purchase with a credit card, interest is added to the bill to compensate the credit card company for lending you money. Conversely, if you deposit money in a savings account, the bank pays you interest to compensate you for lending them money.</p>
+                        <p>Time Value of Money (TVM) is the equation we use to convert between today's money and money in the future. Transactions operate on this principal every day.</p>
+                        <!-- <p>Individuals use the TVM equation to plan for retirement savings or to compare the cost of a prospective mortgage or auto loan. Businesses use the equation to compare investments alternatives, to assist decision-makers by converting project opportunities into dollars, or to borrow money from lenders.</p> -->
+
+                        <div class="text-center bottom-space"><img src="../images/concept.png" alt="time value money" class="img-fluid"></div>
+                        <p>For example:</p>
+                        <p class="indent">A business usually collects customer accounts at the end of the month, but one customer requests an extension. If the business foregoes the payment for a while, the business should be compensated for the delay. What factors would be considered in determining how much the customer should pay at a later date?</p>
+                        <p>Most lenders would want to know:
                             <ul>
-                                <li>Identify the TVM variables within a given word problem</li>
-                                <li>Understand the relationship between variables in the TVM equation</li>
-                                <li>Memorize and recall the general form of the TVM equation</li>
-                                <li>Perform mathematical operations to solve for the unknown variable in the TVM equation, assuming annual interest</li>
+                                <li>How much is being borrowed?</li>
+                                <li>How long will it take the customer to repay the loan?</li>
+                                <li>What is the risk that the customer will not be able to pay the account at a later date?</li>
+                                <li>What else could your company do with the money if the customer paid now?</li>
+                                <li>If the loan is long enough, will inflation further erode the value of tomorrow's dollar?</li>
                             </ul>
-                        </div>
-                        <div id="requirements" class="bottom-space">
-                            <h3>Requirements</h3>
-                            <p>To complete this tutorial, you will need:
-                                <ul>
-                                    <li>Basic algebra skills, including Order of Operations (PEMDAS) and FOIL. <a target="_blank" href="./help/math-basics.html">Click here to review these math principles.</a></li>
-                                    <li>Paper and pencil or pen</li>
-                                    <li>A calculator <span class="note">(optional: a financial calculator)</span></li>
-                                </ul>
-                            </p>
-                            <p>Once you have everything you need, let’s get started!</p>
-                        </div>
+                        </p>
                     </div>
                 </div>
             </div>
@@ -68,6 +61,9 @@
                 </div>
             </div>
         </div>
+
+
+
 
     </div> <!--  end of container -->
 
