--- a/basic-concepts/basics-4.html
+++ b/basic-concepts/basics-4.html
@@ -20,7 +20,7 @@
             <div class="row slide-title">
                 <div class="col-12">
                     <h2 class="primary-title">TVM: The Basics</h2>
-                    <h3 class="secondary-title">Introduction - TVM Variables</h3>
+                    <h3 class="secondary-title">Learning the TVM Equation</h3>
                 </div>
             </div>
             <nav class="row">
@@ -32,24 +32,38 @@
             <div class="row">
                 <div class="col-12">
                     <div class="content">
-                        <p>What factors would you consider in determining how much Future Value (FV) the customer should pay at a later date? Let's attach some variable names to these factors to understand them better.</p>
+                        <h3>Solve an Equation</h3>
+                        <hr>
+                        <p>Now we know what variables factor in, but we'll need to derive the equation to understand how they relate to each other. Let's see this in action with a simple example.</p>
+                        <p class="question">How much money would you have in 1 year if you invested $100 at a rate of 10%?</p>
+                        <p class="answer">The answer is $110.</p>
+                        <hr>
+                        <h5>Steps for solving the sample equation.</h5>
+                        <p><span class="alert">Note: If you know how to solve the equation, you can skip this information.</span> <br>To figure out how much you'll have in 1 year, calculate the interest payment, and then add the interest payment back to the initial investment (principal).
+                        </p>
+                        <ul>
+                            <li>Calculate the interest payment.
+                                <ul>
+                                    <li>First identify the interest (i) rate. Look for a percent or decimal. <span class="alert">Note: If you are using a financial calculator, use the percent, and if you are figuring the calculations on your own, use the decimal format.</span></li>
+                                    <li>Identify the principal or present value (PV). To distinguish between Present Value (PV) and Future Value (FV), ask yourself whether the dollar amount is money you have now or in the future. Since $100 is today's investment, it must be Present Value (PV). This question asks what it <i>will</i> be worth, indicating we want to find the Future Value (FV).</li>
+                                    <li>Multiply the interest rate times the principal amount.
+                                    <div><span class="math">$$.10\times100=10$$</span></div></li>
+                                </ul>
+                            </li>
+                            <li>Finally, time (n) is an expression of time, usually months or years. To calculate the amount you'd have in one year, add the interest payment back to the initial investment (principal).
+                                <div>
+                                    <span class="math">\(100 + 10 = 110\)</span>
+                                </div>
+                            </li>
+                            <li>You can do this in one equation like this:
+                                <div>
+                                    <span class="math">\((.10)100+100=110\)</span>
+                                </div>
+                                <p>Or like this:</p>
+                                <div><span class="math">\(100(1+.10)=110\)</span></div>
+                            </li>
+                        </ul>
 
-                        <div id="PresentValue">
-                            <h4>Present Value (PV)</h4>
-                            <p>How much is being borrowed? Present Value (PV) is the value in today's terms. This is sometimes called the principal or principal investment.</p>
-                        </div>
-                        <div id="FutureValue">
-                            <h4>Future Value (FV)</h4>
-                            <p>How much will you have in the future? Future Value (FV) is the value you will have in the future given a certain interest rate and/or time period.</p>
-                        </div>
-                        <div id="time">
-                            <h4>Time (n)</h4>
-                            <p>How long before the customer pays? Time (n) is the measure of time in years.</p>
-                        </div>
-                        <div id="interest">
-                            <h4>Interest (i) or Rate of Return</h4>
-                            <p>What is the risk that the customer will not be able to pay the account at a later date? What else could your company do with the money if the customer paid now? If the loan is long enough, will inflation further erode the value of tomorrow's dollar? Interest (i) is the rate of return, compensating for risk and opportunity cost. In formulas, you may see this indicated by r, i, or k.</p>
-                        </div>
                     </div>
                 </div>
             </div>
@@ -65,7 +79,6 @@
                 </div>
             </div>
         </div>
-
 
 
 
