--- a/basic-concepts/basics-7.html
+++ b/basic-concepts/basics-7.html
@@ -15,7 +15,6 @@
 <body>
     <div class="container-fluid">
 
-
         <div id="" class="slide">
             <div class="row slide-title">
                 <div class="col-12">
@@ -32,36 +31,30 @@
             <div class="row">
                 <div class="col-12">
                     <div class="content">
-                        <p>Although calculating the interest for each individual year and adding it to the principal does produce the correct answer, this would be time consuming if you were calculating the future value after 10 years. We can derive a general equation that will allow you to solve for any of the variables: Future Value (FV), Present Value (PV), Interest rate (i), or number of years (n). Click Help to review math principals you need to follow along with the derivation of the equation.</p>
-                        <p>If we combine our previous equations into one equation it looks like this:</p>
-                        <div><img class="math" src="../images/derive1.svg" alt="100(1+.10)(1+.10)=121"></div>
-                        <p>We can simplify the equation to this:
-                            <div>$100(1+.10)^2=121$</div>
+                        <p>So far we have calculated FV with the TVM equation and the Future Value Factor.</p>
+                        <p>A third way to calculate TVM is with a financial calculator. If you have a financial calculator, now would be a good time to make sure you know how to use it.</p>
+                        <p>Plug in the numbers to verify that the equation and calculator find the same FV using the math question you are familiar with.</p>
+                        <p class="alert">Note: Your calculator must be on End mode -- this is the most common mistake made on tests. Also, keep in mind that PV is entered as a negative number and interest is entered as a whole number.</p>
+                        <p class="question">How much would $100 grow in 10 years at 10%?</p>
+                        <p class="text-center">
+                            <img src="../images/tvm1_calculator_check_example.png" class="img-fluid">
                         </p>
-
-                        <p>Let's replace the numbers with variables so we can use the equation with any numbers. </p>
-                        <div>
-                            <h3>$FV=PV(1+i)^n$</h3>
-                        </div>
-
-
-
                     </div>
                 </div>
             </div>
-            <!-- to math refresher -->
             <div class="row">
                 <div class="offset-3 col-4 offset-sm-4 col-sm-7 offset-md-6 col-md-6 offset-lg-7 col-lg-4 offset-xl-7 col-xl-4">
-                    <a type="button" class="btn" href="basics-6.html">Back</a>
-                    <a type="button" class="btn" href="basics-8.html">Continue</a>
+                    <a type="button" class="btn" href="basics-8.html">Back</a>
+                    <a type="button" class="btn" href="basics-10.html">Continue</a>
                 </div>
             </div>
             <div class="row">
                 <div class="col-1">
-                    <div class="page-number">9</div>
+                    <div class="page-number"></div>
                 </div>
             </div>
         </div>
+
 
 
     </div> <!--  end of container -->
