--- a/basic-concepts/exercises/exercise2-2.html
+++ b/basic-concepts/exercises/exercise2-2.html
@@ -14,7 +14,6 @@
 
 <body>
     <div class="container-fluid">
-        <!-- problem 2 -->
 
         <div id="" class="slide exercise-slide">
             <div class="row slide-title">
@@ -24,7 +23,7 @@
                 </div>
             </div>
             <nav class="row">
-                <div class="col-12 col-md-3"><a href="./../tvm1-1.html">Home</a></div>
+                <div class="col-12 col-md-3"><a href="./../basics-1.html">Home</a></div>
                 <div class="col-12 col-md-3"><a href="./help/help-index.html">Math Help</a></div>
                 <div class="col-12 col-md-3"><a href="./exercises/exerciseIntro-1.html">Exercises</a></div>
                 <div class="col-12 col-md-3"><a href="./calc.html">Financial Calculator</a></div>
