--- a/basic-concepts/help/help1-4.html
+++ b/basic-concepts/help/help1-4.html
@@ -23,9 +23,9 @@
                 </div>
             </div>
             <nav class="row">
-                <div class="col-12 col-md-3"><a href="../tvm1-1.html">Home</a></div>
+                <div class="col-12 col-md-3"><a href="../basics-1.html">Home</a></div>
                 <div class="col-12 col-md-3"><a href="../help/help-index.html">Math Help</a></div>
-                <div class="col-12 col-md-3"><a href="../tvm1-exercises.html">Exercises</a></div>
+                <div class="col-12 col-md-3"><a href="../basics-exercises.html">Exercises</a></div>
                 <div class="col-12 col-md-3"><a href="../calc.html">Financial Calculator</a></div>
             </nav>
             <div class="row">
@@ -67,7 +67,7 @@
 
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
-    <script src="../tvm1-script.js"></script>
+    <script src="../basics-script.js"></script>
 </body>
 
 </html>
