--- a/formulas/exercise4a-7.html
+++ b/formulas/exercise4a-7.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../tvm-styles.css">
+    <link rel="stylesheet" href="../../tvm-styles.css">
 
     <title>Time Value of Money - Part 1</title>
 </head>
@@ -15,16 +15,16 @@
 <body>
     <div class="container-fluid">
 
-
-        <div id="" class="slide">
+        <!-- problem 4 answer -->
+        <div id="" class="slide exercise-slide">
             <div class="row slide-title">
                 <div class="col-12">
                     <h2 class="primary-title">TVM: The Basics</h2>
-                    <h3 class="secondary-title">Sample Problems</h3>
+                    <h3 class="secondary-title">Exercises</h3>
                 </div>
             </div>
             <nav class="row">
-                <div class="col-12 col-md-3"><a href="./tvm1-1.html">Home</a></div>
+                <div class="col-12 col-md-3"><a href="./../basics-1.html">Home</a></div>
                 <div class="col-12 col-md-3"><a href="./help/help-index.html">Math Help</a></div>
                 <div class="col-12 col-md-3"><a href="./exercises/exerciseIntro-1.html">Exercises</a></div>
                 <div class="col-12 col-md-3"><a href="./calc.html">Financial Calculator</a></div>
@@ -32,16 +32,20 @@
             <div class="row">
                 <div class="col-12">
                     <div class="content">
-                        <p>Answer this question:</p>
-                        <p class="question">If you need to triple your investment in 10 years, what interest rate will you need?</p>
-                        <p>When you think you have the answer, click Continue. If you don’t know how to calculate the answer, click Help.</p>
+                        <h4>Exercise 4: Solution</h4>
+                        <p class="question">A zero coupon bond pays $1,000 at maturity in 20 years. If the appropriate required return for this level of risky asset is 12%, how much would I be willing to pay for this bond? (assume annual compounding/discounting)</p>
+                        <!-- <div><img class="math" src="../images/exponent-step.svg"></div> -->
+                        <p class="math">Present Value (PV) = ?<br>
+                            Future Value (FV) = 1000<br>
+                            i = 12% or 0.12<br>
+                            n = 20</p>
                     </div>
                 </div>
             </div>
             <div class="row">
                 <div class="offset-3 col-4 offset-sm-4 col-sm-7 offset-md-6 col-md-6 offset-lg-7 col-lg-4 offset-xl-7 col-xl-4">
-                    <a type="button" class="btn" href="basics-14.html">Back</a>
-                    <a type="button" class="btn" href="basics-16.html">Continue</a>
+                    <a href="" type="button" class="btn">Back</a>
+                    <a href="" type="button" class="btn">Continue</a>
                 </div>
             </div>
             <div class="row">
@@ -50,7 +54,6 @@
                 </div>
             </div>
         </div>
-
 
 
     </div> <!--  end of container -->
