--- a/basic-concepts/basics-13.html
+++ b/basic-concepts/basics-13.html
@@ -16,7 +16,7 @@
     <div class="container-fluid">
 
 
-        <div id="" class="slide">
+        <div id="" class="slide stop">
             <div class="row slide-title">
                 <div class="col-12">
                     <h2 class="primary-title">TVM: The Basics</h2>
@@ -32,16 +32,18 @@
             <div class="row">
                 <div class="col-12">
                     <div class="content">
-                        <p class="question">How much would you pay today for a promise of $259.37 in 10 years at a discount rate of 10%?</p>
-                        <p class="answer">The answer is $100.</p>
-                        <p> If you answered correctly, click Continue. If you answered incorrectly, click Help to calculate the answer.</p>
+                        <p>Answer this question:</p>
+                        <p class="question">How many years will it take for you to earn $500 on your $1000 investment if you are guaranteed a 9% rate of return?</p>
+
+                        <p>Follow the pattern we have used in the previous sample problems. If you don’t know how to calculate the answer, click Help.</p>
+
                     </div>
                 </div>
             </div>
             <div class="row">
                 <div class="offset-3 col-4 offset-sm-4 col-sm-7 offset-md-6 col-md-6 offset-lg-7 col-lg-4 offset-xl-7 col-xl-4">
-                    <a type="button" class="btn" href="basics-12.html">Back</a>
-                    <a type="button" class="btn" href="basics-14.html">Continue</a>
+                    <a type="button" class="btn" href="basics-14.html">Back</a>
+                    <a type="button" class="btn" href="basics-16.html">Continue</a>
                 </div>
             </div>
             <div class="row">
