--- a/basic-concepts/basics-3.html
+++ b/basic-concepts/basics-3.html
@@ -20,7 +20,7 @@
             <div class="row slide-title">
                 <div class="col-12">
                     <h2 class="primary-title">TVM: The Basics</h2>
-                    <h3 class="secondary-title">Introduction</h3>
+                    <h3 class="secondary-title">Introduction - TVM Variables</h3>
                 </div>
             </div>
             <nav class="row">
@@ -32,23 +32,24 @@
             <div class="row">
                 <div class="col-12">
                     <div class="content">
-                        <h2>TVM Equation</h2>
-                        <p>One of the central concepts of finance is that <i>a dollar today is worth more than a dollar in the future</i>. For example, if you make a purchase with a credit card, interest is added to the bill to compensate the credit card company for lending you money. Conversely, if you deposit money in a savings account, the bank pays you interest to compensate you for lending them money.</p>
-                        <p>Time Value of Money (TVM) is the equation we use to convert between today's money and money in the future. Transactions operate on this principal every day.</p>
-                        <!-- <p>Individuals use the TVM equation to plan for retirement savings or to compare the cost of a prospective mortgage or auto loan. Businesses use the equation to compare investments alternatives, to assist decision-makers by converting project opportunities into dollars, or to borrow money from lenders.</p> -->
+                        <p>What factors would you consider in determining how much Future Value (FV) the customer should pay at a later date? Let's attach some variable names to these factors to understand them better.</p>
 
-                        <div class="text-center bottom-space"><img src="../images/concept.png" alt="time value money" class="img-fluid"></div>
-                        <p>For example:</p>
-                        <p class="indent">A business usually collects customer accounts at the end of the month, but one customer requests an extension. If the business foregoes the payment for a while, the business should be compensated for the delay. What factors would be considered in determining how much the customer should pay at a later date?</p>
-                        <p>Most lenders would want to know:
-                            <ul>
-                                <li>How much is being borrowed?</li>
-                                <li>How long will it take the customer to repay the loan?</li>
-                                <li>What is the risk that the customer will not be able to pay the account at a later date?</li>
-                                <li>What else could your company do with the money if the customer paid now?</li>
-                                <li>If the loan is long enough, will inflation further erode the value of tomorrow's dollar?</li>
-                            </ul>
-                        </p>
+                        <div id="PresentValue">
+                            <h4>Present Value (PV)</h4>
+                            <p>How much is being borrowed? Present Value (PV) is the value in today's terms. This is sometimes called the principal or principal investment.</p>
+                        </div>
+                        <div id="FutureValue">
+                            <h4>Future Value (FV)</h4>
+                            <p>How much will you have in the future? Future Value (FV) is the value you will have in the future given a certain interest rate and/or time period.</p>
+                        </div>
+                        <div id="time">
+                            <h4>Time (n)</h4>
+                            <p>How long before the customer pays? Time (n) is the measure of time in years.</p>
+                        </div>
+                        <div id="interest">
+                            <h4>Interest (i) or Rate of Return</h4>
+                            <p>What is the risk that the customer will not be able to pay the account at a later date? What else could your company do with the money if the customer paid now? If the loan is long enough, will inflation further erode the value of tomorrow's dollar? Interest (i) is the rate of return, compensating for risk and opportunity cost. In formulas, you may see this indicated by r, i, or k.</p>
+                        </div>
                     </div>
                 </div>
             </div>
