--- a/basic-concepts/basics-5.html
+++ b/basic-concepts/basics-5.html
@@ -20,7 +20,7 @@
             <div class="row slide-title">
                 <div class="col-12">
                     <h2 class="primary-title">TVM: The Basics</h2>
-                    <h3 class="secondary-title">Learning the TVM Equation</h3>
+                    <h3 class="secondary-title">TVM Equation</h3>
                 </div>
             </div>
             <nav class="row">
@@ -32,11 +32,21 @@
             <div class="row">
                 <div class="col-12">
                     <div class="content">
-                        <p>Now we know what variables factor in, but we'll need to derive the equation to understand how they relate to each other. Let's see this in action with a simple example. <b>If you aren't sure how to calculate the answer, click the Help link in the navigation menu to learn how.</b></p>
-                        <p class="question">How much money would you have in 1 year if you invested $100 at a rate of 10%?</p>
-                        <p class="answer">The answer is $110.</p>
-                        <p><a href="help/help1-1.html" target="_blank">See the steps for solving this problem here.</a></p>
 
+                        <p>Now apply the same process to roll over the loan for a second year. Some find this a little more complicated, but the steps are the same. Once you have the answer, click Continue.</p>
+                        <p class="question">How much money would you have in another year if you rolled over the $110 earned in the first year?</p>
+                        <p class="answer">The answer is $121.</p>
+                        <hr>
+                        <h4>Let's review:</h4>
+                        <p>
+                            <ul>
+                                <li>We calculated the 1st year of interest earned by multiplying the interest rate times the 1st year starting principal. Then we added the 1st year interest to the principal.
+                                </li>
+                                <li>Next, we calculated the 2nd year of interest by finding 10% of the new principal amount. Then, we added the 2nd year interest to the new principal amount.
+                                </li>
+                            </ul>
+                        </p>
+                        <p>In other words, we calculated the interest earned in each individual year and added all the interest payments back to the principal to find the Future Value (FV). Click help if you need more help to solve this question.</p>
                     </div>
                 </div>
             </div>
@@ -52,7 +62,6 @@
                 </div>
             </div>
         </div>
-
 
 
     </div> <!--  end of container -->
