--- a/basic-concepts/help/help-index.html
+++ b/basic-concepts/help/help-index.html
@@ -23,9 +23,9 @@
                 </div>
             </div>
             <nav class="row">
-                <div class="col-12 col-md-3"><a href="../tvm1-1.html">Home</a></div>
+                <div class="col-12 col-md-3"><a href="../basics-1.html">Home</a></div>
                 <div class="col-12 col-md-3"><a href="../help/help-index.html">Math Help</a></div>
-                <div class="col-12 col-md-3"><a href="../tvm1-exercises.html">Exercises</a></div>
+                <div class="col-12 col-md-3"><a href="../basics-exercises.html">Exercises</a></div>
                 <div class="col-12 col-md-3"><a href="../calc.html">Financial Calculator</a></div>
             </nav>
             <div class="row">
@@ -34,7 +34,6 @@
                         <p>Click on the question to see how to calculate the answer for that question or check the Basic Math Help page for a review of needed concepts.</p>
                         <ul>
                             <li>Basic Math Help: &nbsp;<a href="./math-basics.html">Math Concepts Refresher</a></li>
-                            <li>Example 1: &nbsp;<a href="./help1-1.html">How much money would you have in 1 year if you invested $100 at a rate of 10%?</a></li>
                             <li>Example 2: &nbsp;<a href="./help1-2.html">How much money would you have in another year if you rolled over the $110 earned in the first year?</a></li>
                             <li>Example 3: &nbsp;<a href="./help1-3.html">How much would you pay today for a promise of $259.37 in 10 years at a discount rate of 10%?</a></li>
                             <li>Example 4: &nbsp;<a href="./help1-4.html">If you need to triple your investment in 10 years, what interest rate will you need?</a></li>
@@ -63,7 +62,7 @@
 
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
-    <script src="../tvm1-script.js"></script>
+    <script src="../basics-script.js"></script>
 </body>
 
 </html>
