--- a/formulas/exercise5-8.html
+++ b/formulas/exercise5-8.html
@@ -15,8 +15,8 @@
 <body>
     <div class="container-fluid">
 
-        <!--  problem 4 -->
 
+        <!-- problem 5 -->
         <div id="" class="slide exercise-slide">
             <div class="row slide-title">
                 <div class="col-12">
@@ -25,7 +25,7 @@
                 </div>
             </div>
             <nav class="row">
-                <div class="col-12 col-md-3"><a href="./../tvm1-1.html">Home</a></div>
+                <div class="col-12 col-md-3"><a href="./../basics-1.html">Home</a></div>
                 <div class="col-12 col-md-3"><a href="./help/help-index.html">Math Help</a></div>
                 <div class="col-12 col-md-3"><a href="./exercises/exerciseIntro-1.html">Exercises</a></div>
                 <div class="col-12 col-md-3"><a href="./calc.html">Financial Calculator</a></div>
@@ -34,25 +34,19 @@
                 <div class="col-12">
                     <div class="content">
 
-                        <h4>Exercise 4: Identify the Variables</h4>
-                        <p>Enter the value of each variable in the boxes below. Leave the box for the unknown variable blank.</p>
-                        <p class="question">A zero coupon bond pays $1,000 at maturity in 20 years. If the appropriate required return for this level of risky asset is 12%, how much would I be willing to pay for this bond? (assume annual compounding/discounting)</p>
+                        <h4>Exercise 5: Calculate the Unknown Variable</h4>
+                        <p>Solve the TVM equation and enter the value of the unknown variable from the previous exercise.</p>
+                        <p class="question">A zero coupon bond pays $1,000 at maturity in 20 years. If the appropriate required return for this level of risky asset is 12%, how much would I be willing to pay for this bond (assume annual compounding/discounting)</p>
                         <div class="container">
                             <div class="">
                                 <form action="" class="indent">
                                     <label>Present Value (PV) </label>
-                                    <input id="Present Value (PV)alue-ex4" type="number"><br>
-                                    <label>Future Value (FV) </label>
-                                    <input id="Future Value (FV)alue-ex4" type="number"><br>
-                                    <label>Interest (i)</label>
-                                    <input id="int-ex4" type="number"><br>
-                                    <label>Time (n)</label>
-                                    <input id="yrs-ex4" type="number"><br>
+                                    <input id="Present Value (PV)alue-ex5" type="number"><br>
                                 </form>
-                                <button onclick="exercise_4()" type="button" class="btn calculate-btn">Submit</button>
+                                <button onclick="exercise_5()" type="button" class="btn calculate-btn">Submit</button>
                             </div>
                             <br>
-                            <div class="answer" id="answer-ex4"></div>
+                            <div class="answer" id="answer-ex5"></div>
                         </div>
                     </div>
                 </div>
