--- a/formulas/exercise5a-9.html
+++ b/formulas/exercise5a-9.html
@@ -15,7 +15,7 @@
 <body>
     <div class="container-fluid">
 
-        <!-- problem 4 answer -->
+        <!--   problem 5 answer -->
         <div id="" class="slide exercise-slide">
             <div class="row slide-title">
                 <div class="col-12">
@@ -24,7 +24,7 @@
                 </div>
             </div>
             <nav class="row">
-                <div class="col-12 col-md-3"><a href="./../tvm1-1.html">Home</a></div>
+                <div class="col-12 col-md-3"><a href="./../basics-1.html">Home</a></div>
                 <div class="col-12 col-md-3"><a href="./help/help-index.html">Math Help</a></div>
                 <div class="col-12 col-md-3"><a href="./exercises/exerciseIntro-1.html">Exercises</a></div>
                 <div class="col-12 col-md-3"><a href="./calc.html">Financial Calculator</a></div>
@@ -32,13 +32,25 @@
             <div class="row">
                 <div class="col-12">
                     <div class="content">
-                        <h4>Exercise 4: Solution</h4>
+                        <h4>Exercise 5: Solution</h4>
                         <p class="question">A zero coupon bond pays $1,000 at maturity in 20 years. If the appropriate required return for this level of risky asset is 12%, how much would I be willing to pay for this bond? (assume annual compounding/discounting)</p>
+                        <p>Variables:</p>
                         <!-- <div><img class="math" src="../images/exponent-step.svg"></div> -->
                         <p class="math">Present Value (PV) = ?<br>
                             Future Value (FV) = 1000<br>
-                            i = 12% or 0.12<br>
+                            i = 0.12<br>
                             n = 20</p>
+
+                        <p>Plug the numbers into the equation:</p>
+                        <!-- <div><img class="math" src="../images/exponent-step.svg"></div> -->
+                        <p class="math">
+                            Future Value (FV) = Present Value (PV)(1 + i)<sup>n</sup><br>
+                            1000</span class> = Present Value (PV)(1 + 0.12)<sup>20</sup><br>
+                            1000 = Present Value (PV)(1.12)<sup>20</sup><br>
+                            1000</span clas> = Present Value (PV)(9.64629309)<br>
+                            1000</span clas> / 9.64629309 = Present Value (PV)<br>
+                            <b>Present Value (PV) = $103.67</b>
+                        </p>
                     </div>
                 </div>
             </div>
