--- a/not-on-server/basics-2.html
+++ b/not-on-server/basics-2.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../../tvm-styles.css">
+    <link rel="stylesheet" href="../tvm-styles.css">
 
     <title>Time Value of Money - Part 1</title>
 </head>
@@ -15,17 +15,15 @@
 <body>
     <div class="container-fluid">
 
-
-        <!-- problem 5 -->
-        <div id="" class="slide exercise-slide">
+        <div id="" class="slide">
             <div class="row slide-title">
                 <div class="col-12">
-                    <h2 class="primary-title">TVM: The Basics</h2>
-                    <h3 class="secondary-title">Exercises</h3>
+                    <h2 class="primary-title">Time Value of Money: The Basics</h2>
+                    <h3 class="secondary-title">Introduction</h3>
                 </div>
             </div>
             <nav class="row">
-                <div class="col-12 col-md-3"><a href="./../tvm1-1.html">Home</a></div>
+                <div class="col-12 col-md-3"><a href="./tvm1-1.html">Home</a></div>
                 <div class="col-12 col-md-3"><a href="./help/help-index.html">Math Help</a></div>
                 <div class="col-12 col-md-3"><a href="./exercises/exerciseIntro-1.html">Exercises</a></div>
                 <div class="col-12 col-md-3"><a href="./calc.html">Financial Calculator</a></div>
@@ -33,28 +31,35 @@
             <div class="row">
                 <div class="col-12">
                     <div class="content">
-
-                        <h4>Exercise 5: Calculate the Unknown Variable</h4>
-                        <p>Solve the TVM equation and enter the value of the unknown variable from the previous exercise.</p>
-                        <p class="question">A zero coupon bond pays $1,000 at maturity in 20 years. If the appropriate required return for this level of risky asset is 12%, how much would I be willing to pay for this bond (assume annual compounding/discounting)</p>
-                        <div class="container">
-                            <div class="">
-                                <form action="" class="indent">
-                                    <label>Present Value (PV) </label>
-                                    <input id="Present Value (PV)alue-ex5" type="number"><br>
-                                </form>
-                                <button onclick="exercise_5()" type="button" class="btn calculate-btn">Submit</button>
-                            </div>
-                            <br>
-                            <div class="answer" id="answer-ex5"></div>
+                        <!-- <h2>The Time Value of Money</h2>
+                    <hr> -->
+                        <div id="learningObj" class="bottom-space">
+                            <h3>Learning Objectives</h3>
+                            <ul>
+                                <li>Identify the TVM variables within a given word problem</li>
+                                <li>Understand the relationship between variables in the TVM equation</li>
+                                <li>Memorize and recall the general form of the TVM equation</li>
+                                <li>Perform mathematical operations to solve for the unknown variable in the TVM equation, assuming annual interest</li>
+                            </ul>
+                        </div>
+                        <div id="requirements" class="bottom-space">
+                            <h3>Requirements</h3>
+                            <p>To complete this tutorial, you will need:
+                                <ul>
+                                    <li>Basic algebra skills, including Order of Operations (PEMDAS) and FOIL. <a target="_blank" href="./help/math-basics.html">Click here to review these math principles.</a></li>
+                                    <li>Paper and pencil or pen</li>
+                                    <li>A calculator <span class="note">(optional: a financial calculator)</span></li>
+                                </ul>
+                            </p>
+                            <p>Once you have everything you need, let’s get started!</p>
                         </div>
                     </div>
                 </div>
             </div>
             <div class="row">
                 <div class="offset-3 col-4 offset-sm-4 col-sm-7 offset-md-6 col-md-6 offset-lg-7 col-lg-4 offset-xl-7 col-xl-4">
-                    <a href="" type="button" class="btn">Back</a>
-                    <a href="" type="button" class="btn">Continue</a>
+                    <a type="button" class="btn" href="basics-1.html">Back</a>
+                    <a type="button" class="btn" href="basics-3.html">Continue</a>
                 </div>
             </div>
             <div class="row">
@@ -63,7 +68,6 @@
                 </div>
             </div>
         </div>
-
 
     </div> <!--  end of container -->
 
