--- a/not-on-server/basics-9.html
+++ b/not-on-server/basics-9.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../../tvm-styles.css">
+    <link rel="stylesheet" href="../tvm-styles.css">
 
     <title>Time Value of Money - Part 1</title>
 </head>
@@ -15,16 +15,16 @@
 <body>
     <div class="container-fluid">
 
-        <!--   problem 5 answer -->
-        <div id="" class="slide exercise-slide">
+
+        <div id="" class="slide">
             <div class="row slide-title">
                 <div class="col-12">
                     <h2 class="primary-title">TVM: The Basics</h2>
-                    <h3 class="secondary-title">Exercises</h3>
+                    <h3 class="secondary-title">TVM Equation</h3>
                 </div>
             </div>
             <nav class="row">
-                <div class="col-12 col-md-3"><a href="./../tvm1-1.html">Home</a></div>
+                <div class="col-12 col-md-3"><a href="./tvm1-1.html">Home</a></div>
                 <div class="col-12 col-md-3"><a href="./help/help-index.html">Math Help</a></div>
                 <div class="col-12 col-md-3"><a href="./exercises/exerciseIntro-1.html">Exercises</a></div>
                 <div class="col-12 col-md-3"><a href="./calc.html">Financial Calculator</a></div>
@@ -32,40 +32,28 @@
             <div class="row">
                 <div class="col-12">
                     <div class="content">
-                        <h4>Exercise 5: Solution</h4>
-                        <p class="question">A zero coupon bond pays $1,000 at maturity in 20 years. If the appropriate required return for this level of risky asset is 12%, how much would I be willing to pay for this bond? (assume annual compounding/discounting)</p>
-                        <p>Variables:</p>
-                        <!-- <div><img class="math" src="../images/exponent-step.svg"></div> -->
-                        <p class="math">Present Value (PV) = ?<br>
-                            Future Value (FV) = 1000<br>
-                            i = 0.12<br>
-                            n = 20</p>
-
-                        <p>Plug the numbers into the equation:</p>
-                        <!-- <div><img class="math" src="../images/exponent-step.svg"></div> -->
-                        <p class="math">
-                            Future Value (FV) = Present Value (PV)(1 + i)<sup>n</sup><br>
-                            1000</span class> = Present Value (PV)(1 + 0.12)<sup>20</sup><br>
-                            1000 = Present Value (PV)(1.12)<sup>20</sup><br>
-                            1000</span clas> = Present Value (PV)(9.64629309)<br>
-                            1000</span clas> / 9.64629309 = Present Value (PV)<br>
-                            <b>Present Value (PV) = $103.67</b>
-                        </p>
+                        <p>In the problem we just solved, the number in parentheses is called the Future Value Factor. In the ‘good old days’ before calculators, people used tables of pre-calculated Future Value Factors to solve the TVM equation.</p>
+                        <p>First, find the intersection of the number of periods (years) on the left and the interest rate at the top to find the Future Value Factor. Then multiply PV times the Future Value Factor to calculate FV.</p>
+                        <div class="bottom-space">
+                            <img src="../images/fv_factor_table_example_10_years.png" class="border img-fluid">
+                        </div>
+                        <div><img class="math" src="../images/future-value-factor.svg"></div>
                     </div>
                 </div>
             </div>
             <div class="row">
                 <div class="offset-3 col-4 offset-sm-4 col-sm-7 offset-md-6 col-md-6 offset-lg-7 col-lg-4 offset-xl-7 col-xl-4">
-                    <a href="" type="button" class="btn">Back</a>
-                    <a href="" type="button" class="btn">Continue</a>
+                    <a type="button" class="btn" href="basics-8.html">Back</a>
+                    <a type="button" class="btn" href="basics-10.html">Continue</a>
                 </div>
             </div>
             <div class="row">
                 <div class="col-1">
-                    <div class="page-number"></div>
+                    <div class="page-number">13</div>
                 </div>
             </div>
         </div>
+
 
 
     </div> <!--  end of container -->
